security-groups.tf
/*
resource "aws_security_group" "aws-sg" {
  name        = "test-security-group"
  vpc_id      = aws_vpc.test-vpc.id

  ingress {
    protocol    = "tcp"
    from_port   = var.app_port
    to_port     = var.app_port
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}*/

resource "aws_security_group" "ecs_sg" {
  name        = "testapp-ecs-tasks-security-group"
  vpc_id      = aws_vpc.test-vpc.id

  ingress {
    protocol        = "tcp"
    from_port       = var.app_port
    to_port         = var.app_port
    security_groups = [aws_security_group.aws-sg.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
